<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.pixelplax.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_navigation_movie_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.example.pixelplax.ui.series.SeriesFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_series" >
        <action
            android:id="@+id/action_navigation_series_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.pixelplax.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.pixelplax.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_detailFragment_to_navigation_movie"
            app:destination="@id/navigation_movie" />
        <action
            android:id="@+id/action_detailFragment_to_navigation_series"
            app:destination="@id/navigation_series" />
    </fragment>
</navigation>